modify templates and icons

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ pygments: true
 paginate: 8
 permalink: /:title
 
-title: BeiYuu.com
-url: http://beiyuu.com
+title: 行云流水's Blog
+url: http://xylsh.github.com
 feed: /atom.xml
-author_info: <a href="http://beiyuu.com/">BeiYuu</a>
+author_info: <a href="http://xylsh.github.com/">行云流水</a>
