--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ auto: true
 markdown: rdiscount
 pygments: true
 paginate: 8
-permalink: /:title
+permalink: /:year/:title
 
 title: 行云流水's Blog
 url: http://xylsh.github.com
