--- a/_config.yml
+++ b/_config.yml
@@ -81,9 +81,9 @@ JB :
   # Set 'provider' to false to turn commenting off globally.
   #
   comments :
-    provider : false
+    provider : disqus
     disqus :
-      short_name : jekyllbootstrap
+      short_name : xylsh
     livefyre :
       site_id : 
     intensedebate :
