--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
 # This is the default format. 
+
+markdown: rdiscount
+
 # For more see: http://jekyllrb.com/docs/permalinks/
 #permalink: /:categories/:year/:month/:day/:title 
 permalink: /:year/:title 
